--- a/src/typeset/myfit.html
+++ b/src/typeset/myfit.html
@@ -122,7 +122,7 @@
 		<script type="text/javascript" src="../../lib/jquery-1.3.2.js"></script>
 		<script type="text/javascript" src="myfit.js"></script>
 		<script type="text/javascript">
-			var text = "In olden times when wishing still helped one, there lived a king whose daughters were all beautiful; and the youngest was so beautiful that the sun itself, which has seen so much, was astonished whenever it shone in her face. Close by the king's castle lay a great dark forest, and under an old lime-tree in the forest was a well, and when the day was very warm, the king's child went out to the forest and sat down by the fountain; and when she was bored she took a golden ball, and threw it up on high and caught it; and this ball was her favourite plaything.";
+			var text = "In olden times when wishing still helped one, there lived a king whose daughters were all beautiful; and the youngest was so beautiful that the sun itself, which has seen so much, was astonished whenever it shone in her face. Close by the king's castle lay a great dark forest, and under an old lime-tree in the forest was a well, and when the day was very warm, the king's child went out to the forest and sat down by the fountain; and when she was bored she took a golden ball, and threw it up on high and caught it; and this ball was her favorite plaything.";
 			var defaultOptions = {
 				space: {
 					width: 1 / 3,
@@ -144,22 +144,21 @@
 					spaceShrink = options.space.shrink * em,
 					words = text.split(/\s/),
 					list = [],
-					type = 'justify';
+					type = 'left';
 
 				words.forEach(function (value, index, array) {
 					list.push(new Box(measureText(value).width, value));
 
 					if (index === array.length - 1) {
-						list.push(new Penalty(0, infinity, 0));
 						list.push(new Glue(0, infinity, 0));
 						list.push(new Penalty(0, -infinity, 1));
 					} else {
 						if (type === 'justify') {
 							list.push(new Glue(spaceWidth, spaceStretch, spaceShrink));
-						} else if (type === 'right') {
-							list.push(new Glue(0, 18, 0));
+						} else if (type === 'left') {
+							list.push(new Glue(0, 12, 0));
 							list.push(new Penalty(0, 0, 0));
-							list.push(new Glue(spaceWidth, -18, 0));
+							list.push(new Glue(spaceWidth, -12, 0));
 						}
 					}
 				});
@@ -179,9 +178,7 @@
 
 						if (node.type === 'glue') {
 							node.width = node.computeWidth(r);
-							if (!lines.peek().nodes.isEmpty()) {
-								lines.peek().nodes.push(node);
-							}
+							lines.peek().nodes.push(node);
 						} else if (node.type === 'box') {
 							lines.peek().nodes.push(node);
 						}
@@ -203,7 +200,7 @@
 							context.fillText(node.value, x, y);
 							x += node.width;
 						} else if (node.type === 'glue') {
-							x += node.width;
+							x += node.width;	
 						}
 					});
 					y += lineHeight;
