Added link to Microsoft page detailing the use of the text-justify CSS property.

--- a/src/typeset/myfit.html
+++ b/src/typeset/myfit.html
@@ -101,7 +101,7 @@
 			</li>
 			<li>The current code uses the global name-space for variables and functions, it would be good to wrap these up in a module, with a well defined API.</li>
 			<li>Test in other browsers: currently it seems to work fine with Firefox on Linux and Windows. Firefox on OSX, however performs badly (seems to be caused by strange font metrics, and bad anti-aliasing.) Also works fine with Safari on OSX.</li>
-			<li>Compare quality against line-breaking implemented by Internet Explorer's <code>text-justify</code> CSS property.</li>
+			<li>Compare quality against line-breaking implemented by <a href="http://msdn.microsoft.com/en-us/library/ms534671%28VS.85%29.aspx">Internet Explorer's <code>text-justify</code> CSS property</a>.</li>
 			<li>Figure out how to deal with dynamic paragraphs (i.e. paragraphs being edited) as their ratios will change during editing and thus (if used with the Knuth and Plass linebreaking algorithm) visibly move around.</li>
 		</ul>
 
